# fsspec-encrypted

./: .gitignore  LICENSE.md  README.md  README.rst  fsspec-enc.cast  notes.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: dec_pandas.py  enc_pandas.py  large_csv.py  s3_pandas.py
fsspec_encrypted/: __init__.py  fs_enc.py  fs_enc_cli.py
tests/: test_cli.py  test_fs_enc.py
